Fix typo in introduction paragraph

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>A little about me</h1>
     <hr>
-    <p>Hi! I'm Barão, i'm learning how to code and i'ts my dream to become a programmer, in this page, you can keep track of my projects,
+    <p>Hi! I'm Barão, i'm learning how to code and it's my dream to become a programmer, in this page, you can keep track of my projects,
         where to find me, my interests and more!
     </p>
     <h2>Where to find me</h2>
