added a blog hooray

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <p>Hi! I'm Barão, i'm learning how to code and it's my dream to become a programmer, in this page, you can keep track of my projects,
         where to find me, my interests and more!
     </p>
+    <a href="blog.html">
+    <button>Blog</button>
+    </a>
+    <hr>
     <h2>Where to find me</h2>
     <ul>
         <li>Discord: @raioslaser</li>
